Update .env.example and README.md

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
-# .env
+# The only important one is `LOCAL_KUBE_DIR`, you can override others in each service definitions `.environment` block. 
 
-# 1. The absolute path to your local .kube directory
+# The absolute path to your local .kube directory
 # On Mac/Linux: ~/.kube
 # On Windows: C:/Users/YourName/.kube
 LOCAL_KUBE_DIR=~/.kube
 
-# 2. The specific config file inside that directory to use
+
+
+# The specific config file inside that directory to use
 KUBE_FILENAME=config
 
-# 3. Global Defaults
+# Global Defaults
 DEFAULT_CTX=my-cluster-context
 DEFAULT_NS=default
